tests/cases/generics/errors/generic-enum-constructor-uninferred.ari
fn main() -> i64 {
  let value = None();
  return 0;
}
